# C-FNN

neuralNet/: CMakeCache.txt  CMakeLists.txt  main.c  math_functions.c  math_functions.h  mnist_parser.c  mnist_parser.h  plotter.c
